config of data base model and cors rules

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 DATABASE_URL=URI_POSTGRESQL
-NODE_ENV=enviroment(dev, prod, staging, etc)
+NODE_ENV=dev, prod, staging, etc
 PORT=SOME_PORT
+FRONT_URL=URL OF REQUEST TO CORS RULES
