auth flux and middleware conditions

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ DATABASE_URL=URI_POSTGRESQL
 NODE_ENV=dev, prod, staging, etc
 PORT=SOME_PORT
 FRONT_URL=URL OF REQUEST TO CORS RULES
+TOKEN_SECRET=Encryped password
+TOKEN_EXPIRES=Time to expiress a token
