--- a/package.json
+++ b/package.json
@@ -22,10 +22,14 @@
   "homepage": "https://github.com/cofy43/tickets-services-back#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
     "pg": "^8.7.3",
+    "request-ip": "^3.3.0",
     "sequelize": "^6.21.3",
     "sqlite3": "^5.0.10"
   }
